# Cube-Infinifold

./: .gitignore  1.txt  CHANGELOG.md  Cargo.toml  MyCert.pfx  README.md  Target of Today.md  build-release.bat  build.rs  levels.json  levels2.json
.github/workflows/: CI.yaml  build-only-matrix.yaml  build-only.yaml  create-release.js  release.yml  run.yaml  rust.yml  test.yaml  test_linux.yaml
articles/: Target of Today.md
articles/assets/: 我的书架_笔趣阁.html
assets/shaders/: b_faces.vs  b_lines.vs  basic.vs
assets/ui/: button.ai
assets/version_files/macos/: levels.json
assets/version_files/ubuntu/: levels.json
assets/version_files/windows/: levels.json
cube-infinifold/: Cargo.toml  build.rs
cube-infinifold/src/: game_options.rs  main.rs
cube-infinifold/src/my/: cube_infinifold_logo.rs  gl_views.rs  install.rs  level_index.rs  load_fonts.rs  menu.rs  mod.rs  performance_evaluation.rs
cube-infinifold/src/my/game/: game_info.rs  load_level.rs  mod.rs  penrose_triangle.rs
cube-infinifold/src/test/: mod.rs
examples/install_dependencies/: Cargo.toml
examples/install_dependencies/src/: main.rs
examples/test_example_lib/: Cargo.toml
examples/test_example_lib/src/: lib.rs
examples/test_set_env/: Cargo.toml  README.md  build.rs
examples/test_set_env/src/: add.rs  lib.rs  main.rs
examples/test_set_env/src/lib/: add.rs
levels/: readme.md
levels/level-interface/: Cargo.toml
levels/level-interface/src/: lib.rs
levels/levels-interface/: Cargo.toml
levels/levels-interface/src/: lib.rs
levels/test-level/: Cargo.toml
levels/test-level/src/: lib.rs
levels/test-penrose-triangle/: Cargo.toml
levels/test-penrose-triangle/src/: lib.rs  required.rs
src/: game_options.rs  main.rs
src/libs/levels/: test.rs
src/my/: cube_infinifold_logo.rs  gl_game_view.rs  gl_views.rs  menu.rs  mod.rs  performance_evaluation.rs
src/my/game/: mod.rs  penrose_triangle.rs
src/test/: mod.rs
tools/cube-infinifold-check/: Cargo.toml  build.rs
tools/cube-infinifold-check/src/: ffmpeg.rs  font.rs  main.rs
tools/ffmpeg-loader/: Cargo.toml  build.rs
tools/ffmpeg-loader/src/: lib.rs
tools/my-items/: Cargo.toml
tools/my-items/src/: lib.rs
tools/my-levels-finder/: Cargo.toml
tools/my-levels-finder/src/: item.rs  lib.rs
