[workspace]
members = [
    "tools/cube-infinifold-check",  # application check
    "cube-infinifold",              # application
    "tools/ffmpeg-loader",          # dylib
    "tools/my-items",               # crate
    "tools/my-levels-finder",       # crate
    "levels/level-interface",       # crate
    "levels/levels-interface",      # crate
    "levels/test-level",            # dylib/level
    "levels/test-penrose-triangle",  # dylib/level
    # "examples/test_set_env",        # test/application
]
resolver = "2"
