[package]
description = "Cube Infinifold (A Puzzle Game)"
name = "cube-infinifold"
version = "0.1.1"
edition = "2021"
authors = ["Yijun Wu", "Rimor Aluria"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
egui_extras = { version = "*", features = ["all_loaders"] }
ndarray = "*"
video-rs = { version = "*", features = ["ndarray"] }
rand = "*"
glm = "*"
chrono = "*"
image = "*"

[build-dependencies]
winresource = "*"

[package.metadata.winresource]
OriginalFilename = "Cube Infinifold.exe"
LegalCopyright = "Infinifold © 2024"
# FileDescription = "Cube Infinifold (A Puzzle indie Game)"
ProductName = "Cube Infinifold"
ProductVersion = "0.1.1.50"

[[bin]]
name = "cube-infinifold"
