[package]
description = "Cube Infinifold (A Puzzle Game)"
name = "cube-infinifold"
version = "0.1.1"
edition = "2021"
authors = ["Yijun Wu", "Rimor Aluria"]
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "*"
eframe = { version = "*", features = ["wgpu"] }
egui_extras = { version = "*", features = ["all_loaders"] }
ndarray = "*"
rand = "*"
glm = "*"
chrono = "*"
image = "*"
libloading = "*"

[build-dependencies]
winresource = "*"

[package.metadata.winresource]
OriginalFilename = "Cube Infinifold.exe"
LegalCopyright = "Infinifold © 2024"
# FileDescription = "Cube Infinifold (A Puzzle indie Game)"
ProductName = "Cube Infinifold"
ProductVersion = "0.1.1.50"

[[bin]]
name = "cube-infinifold"

[dependencies.levels-interface]
path = "../levels/levels-interface"
features = ["cube-infinifold_main"]


[dependencies.my-levels-finder]
path = "../tools/my-levels-finder"

[dependencies.my-items]
path = "../tools/my-items"
