[package]
name = "levels-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "*"


[dependencies.my-items]
path = "../../tools/my-items"

[features]
cube-infinifold_main = []
default = []