[package]
name = "test-penrose-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.level-interface]
path = "../level-interface"

[dependencies.my-items]
path = "../../tools/my-items"

[lib]
name ="testpenrose"
crate-type = ["dylib"]
